Connecting to keycloak works in Docker and locally